--- a/AboutMe.html
+++ b/AboutMe.html
@@ -11,13 +11,15 @@
         <div class="header">
             <a href="#default" class="logo">Cody Howes</a>
             <div class="header-right">
-              <a class="active" href="#home">Home</a>
-              <a href="#contact">About Me</a>
-              <a href="#about">Links</a>
+              <a href="index.html">Home</a>
+              <a class="active" href="AboutMe.html">About Me</a>
+              <a href="links.html">Links</a>
             </div>
           </div>
           <h1>About Me</h1>
-        <p>Hi, My name is Cody Howes. I am 27 years old, and I am from Monroe, La.
+          <hr id="hr-about">
+          <div id="bio-text">
+            <p>Hi, My name is Cody Howes. I am 27 years old, and I am from Monroe, La.
             I have been working with web development for about 2 years now. 
             At first i dabbled while trying to figure out what I wanted to do with my computer science degree. 
             Once I figured out where I wanted to take career in computer science, I dove head first into web design. 
@@ -26,5 +28,6 @@
             </p>
             <p>In my spare time, I love graphic design, and making various genres of music. I have been a dedicated musician since 2012. I have played in a few bands, and in 2017 I started producing two projects that have been successful endeavors.</p>
             <p>My strengths are collaborating well with others, from my experience in bands and previous jobs I've held. I am good at finding creative solutions to problems. My main weakness is I can be too much of a perfectionist, and overly critical of myself.</p>
-    </body>
+          </div> 
+  </body>
 </head>
