--- a/index.html
+++ b/index.html
@@ -12,34 +12,31 @@
     <div class="header">
         <a href="#default" class="logo">Cody Howes</a>
         <div class="header-right">
-          <a class="active" href="#home">Home</a>
-          <a href="#contact">About Me</a>
-          <a href="#about">Links</a>
+          <a class="active" href="index.html">Home</a>
+          <a href="AboutMe.html">About Me</a>
+          <a href="links.html">Links</a>
         </div>
       </div>
     <div id="welcome">
-          <p>Hi and welcome to my portfolio! Here you will find various projects I have been working on!</p>
+          <p>Hello and welcome to my portfolio! Here you will find various projects I have been working on!</p>
     </div>
     <div id="project-title">
         <h1>Projects</h1>
+        <hr>
     </div>
     <div id="thumbnails">
+        <div class="image-wrap">
         <img src="file:///home/cody/Pictures/gigachad-1024x576.jpg" alt="gigachad">
+            <div id="image-text-one">Order Summary</div>
+        </div>
+        <div class="image-wrap-two">
         <img src="file:///home/cody/Pictures/gigachad-1024x576.jpg" alt="gigachad">
+            <div id="image-text-two">EVH Tribute Page</div>
+        </div>
+        <div class="image-wrap-three">
         <img src="file:///home/cody/Pictures/gigachad-1024x576.jpg" alt="gigachad">
-    </div>
-    <div id="project-links">
-        <ul>
-            <li>
-               <a href="#">Order Summary</a>  
-            </li>
-            <li>
-               <a href="#">EVH Tribute Page</a>  
-            </li>
-            <li>
-               <a href="#">List of Recipes</a>  
-            </li>
-        </ul>
+            <div id="image-text-three">Simple Recipe List</div>
+        </div>
     </div>
 </body>
 </html>
