made img links and added music

--- a/index.html
+++ b/index.html
@@ -21,22 +21,43 @@
           <p>Hello and welcome to my portfolio! Here you will find various projects I have been working on!</p>
     </div>
     <div id="project-title">
-        <h1>Projects</h1>
+        <h1>Dev Projects</h1>
         <hr>
     </div>
     <div id="thumbnails">
         <div class="image-wrap">
-        <img src="file:///home/cody/Pictures/gigachad-1024x576.jpg" alt="gigachad">
-            <div id="image-text-one">Order Summary</div>
+        <a href="https://codyxhowes.github.io/rpg-name-gen/">
+            <img src="/home/cody/Pictures/rpggenedit.jpg" alt="rpg name gen">
+        </a>
+            <div id="image-text-one">RPG Name Generator</div>
         </div>
         <div class="image-wrap-two">
-        <img src="file:///home/cody/Pictures/gigachad-1024x576.jpg" alt="gigachad">
-            <div id="image-text-two">EVH Tribute Page</div>
+        <a href="https://codyxhowes.github.io/order-summary-project/">
+            <img src="/home/cody/Pictures/ordersumedit.jpg" alt="order summary">
+            </a>
+        <div id="image-text-two">Order Summary Layout</div>
         </div>
         <div class="image-wrap-three">
-        <img src="file:///home/cody/Pictures/gigachad-1024x576.jpg" alt="gigachad">
-            <div id="image-text-three">Simple Recipe List</div>
+        <a href="https://codyxhowes.github.io/tribute-page/">
+            <img src="/home/cody/Pictures/evhedit.jpg" alt="evh tribute">
+        </a>
+            <div id="image-text-three">EVH Tribute</div>
         </div>
+        <div class="image-wrap-four">
+        <a href="https://codyxhowes.github.io/odin-recipes/">
+            <img src="/home/cody/Pictures/recipeedit.jpg" alt="recipe">
+        </a>
+            <div id="image-text-four">Simple Recipe List</div>
+            </div>
+    </div class="project-title">
+        <h1 id="music-title">Music Projects</h1>
+    </div>
+        <hr>
+        <div id="welcome">
+            <p>Some music projects I've recorded or played on.</p>
+    </div>
+        <div id="music-embed">
+            <iframe src="https://open.spotify.com/embed/playlist/2KrEUHTn9RuwzQJIJb7a0k?theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
     </div>
 </body>
 </html>
