fixed some links and colors

--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
     </div>
     <div id="thumbnails">
         <div class="image-wrap">
-        <a href="https://codyxhowes.github.io/rpg-name-gen/">
+        <a href="https://codyxhowes.github.io/rpg-name-gen/" target="_blank">
             <img src="/home/cody/Pictures/rpggenedit.jpg" alt="rpg name gen">
         </a>
             <div id="image-text-one">RPG Name Generator</div>
         </div>
         <div class="image-wrap-two">
-        <a href="https://codyxhowes.github.io/order-summary-project/">
+        <a href="https://codyxhowes.github.io/order-summary-project/" target="_blank">
             <img src="/home/cody/Pictures/ordersumedit.jpg" alt="order summary">
             </a>
         <div id="image-text-two">Order Summary Layout</div>
         </div>
         <div class="image-wrap-three">
-        <a href="https://codyxhowes.github.io/tribute-page/">
+        <a href="https://codyxhowes.github.io/tribute-page/" target="_blank">
             <img src="/home/cody/Pictures/evhedit.jpg" alt="evh tribute">
         </a>
             <div id="image-text-three">EVH Tribute</div>
         </div>
         <div class="image-wrap-four">
-        <a href="https://codyxhowes.github.io/odin-recipes/">
+        <a href="https://codyxhowes.github.io/odin-recipes/" target="_blank">
             <img src="/home/cody/Pictures/recipeedit.jpg" alt="recipe">
         </a>
             <div id="image-text-four">Simple Recipe List</div>
