--- a/links.html
+++ b/links.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
@@ -21,20 +24,21 @@
         <div id="link-block">
             <ul id="link-list">
                 <li>
-                    <a href="https://www.linkedin.com/in/cody-howes-330036211/">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/cody-howes-330036211/" target="_blank">LinkedIn</a>
                 </li>
                 <li>
-                    <a href="https://github.com/codyxhowes">GitHub</a>
+                    <a href="https://github.com/codyxhowes" target="_blank">GitHub</a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/codyxhowes/">Facebook</a>
+                    <a href="https://www.facebook.com/codyxhowes/" target="_blank">Facebook</a>
                 </li>
                 <li>
-                    <a href="https://www.youtube.com/channel/UCZnRh16Bv5QvXzIctmRNfPw">Youtube</a>
+                    <a href="https://www.youtube.com/channel/UCZnRh16Bv5QvXzIctmRNfPw" target="_blank">Youtube</a>
                 </li>
                 <li>
-                    <a href="https://open.spotify.com/artist/4S22RGe4mPsfGW5pymdwWw">Spotify</a>
+                    <a href="https://open.spotify.com/artist/4S22RGe4mPsfGW5pymdwWw" target="_blank">Spotify</a>
                 </li>
             </ul>
+            <p>Email: howes363@gmail.com</p>
         </div>
     </body>
