--- a/AboutMe.html
+++ b/AboutMe.html
@@ -24,9 +24,9 @@
           <div id="bio-text">
             <p>Hi, My name is Cody Howes. I am 27 years old, and I am from Monroe, La.
             I have been working with web development for about 2 years now. 
-            At first i dabbled while trying to figure out what I wanted to do with my computer science degree. 
+            At first I dabbled while trying to figure out what I wanted to do with my computer science degree. 
             Once I figured out where I wanted to take career in computer science, I dove head first into web design. 
-            I learned HTML, CSS, and Javascript. 
+            I learned Git, HTML, CSS, Bootstrap, and Javascript. 
             I try to learn something about each language every day by working on my own projects, reading, or watching videos. Currently, I am expanding my knowledge of Javascript and plan to learn TypeScript, React, and Node.
             </p>
             <p>In my spare time, I love graphic design, and making various genres of music. I have been a dedicated musician since 2012. I have played in a few bands, and in 2017 I started producing two projects that have been successful endeavors.</p>
