changed some tags and css

--- a/index.html
+++ b/index.html
@@ -12,41 +12,41 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    <div class="header">
+    <div id="navbar">
         <a href="#default" class="logo">Cody Howes</a>
-        <div class="header-right">
+        <div id="navbar-right">
           <a class="active" href="index.html">Home</a>
           <a href="AboutMe.html">About Me</a>
           <a href="links.html">Links</a>
         </div>
       </div>
-    <div id="welcome">
+    <div id="welcome-section">
           <p>Hello and welcome to my portfolio! Here you will find various projects I have been working on!</p>
     </div>
     <div id="project-title">
         <h1>Dev Projects</h1>
         <hr>
     </div>
-    <div id="thumbnails">
-        <div class="image-wrap">
+    <div id="projects">
+        <div class="project-tile">
         <a href="https://codyxhowes.github.io/rpg-name-gen/" target="_blank">
             <img src="rpggenedit.jpg" alt="rpg name gen">
         </a>
             <div id="image-text-one">RPG Name Generator</div>
         </div>
-        <div class="image-wrap-two">
+        <div class="project-tile-two">
         <a href="https://codyxhowes.github.io/order-summary-project/" target="_blank">
             <img src="ordersumedit.jpg" alt="order summary">
             </a>
         <div id="image-text-two">Order Summary Layout</div>
         </div>
-        <div class="image-wrap-three">
+        <div class="project-tile-three">
         <a href="https://codyxhowes.github.io/tribute-page/" target="_blank">
             <img src="evhedit.jpg" alt="evh tribute">
         </a>
             <div id="image-text-three">EVH Tribute</div>
         </div>
-        <div class="image-wrap-four">
+        <div class="project-tile-four">
         <a href="https://codyxhowes.github.io/odin-recipes/" target="_blank">
             <img src="recipeedit.jpg" alt="recipe">
         </a>
@@ -56,7 +56,7 @@
         <h1 id="music-title">Music Projects</h1>
     </div>
         <hr>
-        <div id="welcome">
+        <div id="welcome-section">
             <p>Some music projects I've recorded or played on.</p>
     </div>
         <div id="music-embed">
