--- a/links.html
+++ b/links.html
@@ -11,9 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio - Links</title>
     <body>
-        <div class="header">
+        <div id="navbar">
             <a href="#default" class="logo">Cody Howes</a>
-            <div class="header-right">
+            <div id="navbar-right">
               <a href="index.html">Home</a>
               <a href="AboutMe.html">About Me</a>
               <a class="active" href="links.html">Links</a>
@@ -21,7 +21,7 @@
           </div>
           <h1>Links</h1>
           <hr id="hr-links">
-        <div id="link-block">
+        <div id="profile-link">
             <ul id="link-list">
                 <li>
                     <a href="https://www.linkedin.com/in/cody-howes-330036211/" target="_blank">LinkedIn</a>
