--- a/AboutMe.html
+++ b/AboutMe.html
@@ -11,9 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio - About Me</title>
     <body>
-        <div class="header">
+        <div id="navbar">
             <a href="#default" class="logo">Cody Howes</a>
-            <div class="header-right">
+            <div id="navbar-right">
               <a href="index.html">Home</a>
               <a class="active" href="AboutMe.html">About Me</a>
               <a href="links.html">Links</a>
