added apps and a list

--- a/index.html
+++ b/index.html
@@ -27,30 +27,23 @@
         <h2>Dev Projects</h2>
         <hr>
     </div>
-    <section id="projects">
-        <div class="project-tile">
-        <a href="https://codyxhowes.github.io/rpg-name-gen/" target="_blank">
-            <img src="rpggenedit.jpg" alt="rpg name gen">
-        </a>
-            <div id="image-text-one">RPG Name Generator</div>
+    <section id="link-section">
+        <div id="profile-link">
+        <ul id="link-list">
+            <li>
+                <a href="https://codyxhowes.github.io/bitcoin-tracker/">Bitcoin Tracker</a>
+            </li>
+            <p>An application that displays the current price and percent change of Bitcoin in real-time.</p>
+            <li>
+                <a href="https://codyxhowes.github.io/shopping-list-app/">Shopping List</a>
+            </li>
+            <p>A simple mobile responsive shopping list I built while learning Vue.js.</p>
+            <li>
+                <a href="https://codyxhowes.github.io/rpg-name-gen/">RPG Name Generator</a>
+            </li>
+            <p>An application designed to make fantasy RPG character creation fast and easy.</p>
+        </ul>
         </div>
-        <div class="project-tile-two">
-        <a href="https://codyxhowes.github.io/order-summary-project/" target="_blank">
-            <img src="ordersumedit.jpg" alt="order summary">
-            </a>
-        <div id="image-text-two">Order Summary Layout</div>
-        </div>
-        <div class="project-tile-three">
-        <a href="https://codyxhowes.github.io/tribute-page/" target="_blank">
-            <img src="evhedit.jpg" alt="evh tribute">
-        </a>
-            <div id="image-text-three">EVH Tribute</div>
-        </div>
-        <div class="project-tile-four">
-        <a href="https://codyxhowes.github.io/odin-recipes/" target="_blank">
-            <img src="recipeedit.jpg" alt="recipe">
-        </a>
-            <div id="image-text-four">Simple Recipe List</div>
     </section>
     <section>
     <div class="project-title">
